// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Snapshots Name 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    name="Slider"
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots No props 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots Step - 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    step={20}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots Step 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    name="Slider"
    onChange={[Function]}
    step={20}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots max - 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots max 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    name="Slider"
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots min - 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={100}
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots min 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={100}
    name="Slider"
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots onChange - 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;

exports[`Slider Snapshots onChange 1`] = `
<div
  className="sc-AykKC jhRlpi"
>
  <input
    disabled={false}
    max={100}
    min={0}
    name="Slider"
    onChange={[Function]}
    step={1}
    type="range"
  />
</div>
`;
